zoom focus on ios fixes

--- a/main.css
+++ b/main.css
@@ -411,7 +411,8 @@ section{
     color: #000;
     margin-top: 0.5rem;
     background-color: #f6f4f2;
-    font-size: 0.875rem;
+    /* font-size: 0.875rem; */
+    font-size: 16px;
     font-weight: 100;
   }
 
